--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "framer-motion": "^11.11.9",
+    "lava-landing-page": "file:",
     "next": "14.2.15",
     "react": "^18",
     "react-dom": "^18"
