change structure and set animation and make the design responsive

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,48 @@
 {
-  "cSpell.words": ["Swiper"]
+  "cSpell.words": [
+    "Dribbble",
+    "laoreet",
+    "Mamdouh",
+    "Suspendisse",
+    "Swiper",
+    "laoreet",
+    "mauris",
+    "Fusce",
+    "dapibus",
+    "euismod",
+    "convallis",
+    "odio",
+    "Donec",
+    "ornare",
+    "pellentesque",
+    "aliquet",
+    "urna",
+    "Vestibulum",
+    "pulvinar",
+    "rhoncus",
+    "blandit",
+    "velit",
+    "Duis",
+    "viverra",
+    "scelerisque",
+    "placerat",
+    "orci",
+    "consequat",
+    "Aenean",
+    "faucibus",
+    "venenatis",
+    "Phasellus",
+    "imperdiet",
+    "felis",
+    "eget",
+    "vestibulum",
+    "nulla",
+    "Aliquam",
+    "augue",
+    "maximus",
+    "porta",
+    "Curabitur",
+    "tristique",
+    "lacus"
+  ]
 }
