--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "next": "14.2.15",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.3.0",
+    "server-only": "^0.0.1",
     "swiper": "^11.1.14"
   },
   "devDependencies": {
